--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  flutter_tts: ^3.2.2
   sound_stream: ^0.2.0
   dialogflow_grpc: ^0.2.9
   rxdart: ^0.24.1
